<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/main_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/grey_100"
        android:orientation="vertical"
        android:weightSum="4">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3"
            android:gravity="center_horizontal"
            android:orientation="vertical">

        <ImageView
                style="@style/ThemeOverlay.FirebaseIcon"
                android:layout_width="2dp"
                android:layout_height="2dp"
                android:contentDescription="@string/desc_firebase_lockup"
                android:src="@drawable/firebase_lockup_400" />

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/title_bottom_margin"
                android:text="@string/google_title_text"
                android:theme="@style/ThemeOverlay.MyTitleText" />

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimary"
                android:text="Just A Tap Away! Pay and Get XP Boosted!" />

        <TextView
                android:id="@+id/status"
                style="@style/ThemeOverlay.MyTextDetail"
                android:text="@string/app_details"
                 />

        <TextView
                android:id="@+id/detail"
                style="@style/ThemeOverlay.MyTextDetail"
                android:visibility="gone"
                tools:text="Firebase User ID: 123456789abc" />
        <!--<Button
                android:id="@+id/loadProducts"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onLoadProductsClicked"
                android:text="Load products"
                 /> -->
        <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/products"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:scrollbars="vertical"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />
<androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/achievementlogo"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/achieve"/>
        <Button
                android:id="@+id/achievement"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Achievements"
                android:textAllCaps="false" />
        <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/leaderlogo"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/achievemnet_google_play_games_png"/>

        <Button
                android:id="@+id/leaderboard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Leaderboard"
                android:textAllCaps="false" />


    </LinearLayout>


    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@color/grey_300">

        <com.google.android.gms.common.SignInButton
                android:id="@+id/signInButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:visibility="visible"
                tools:visibility="gone" />

        <LinearLayout
                android:id="@+id/signOutAndDisconnect"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:orientation="horizontal"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:visibility="gone"
                tools:visibility="visible">

            <Button
                    android:id="@+id/signOutButton"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/signed_out"
                    android:theme="@style/Base.Theme.MaterialComponents.Dialog" />

            <Button
                    android:id="@+id/disconnectButton"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/disconnect"
                    android:theme="@style/Base.Theme.MaterialComponents.Dialog" />
        </LinearLayout>

    </RelativeLayout>

</LinearLayout>